Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2435

Deadlock can occur during the registration of a qmf agent

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.7
    • C++ Broker
    • None

    Description

      The "publishNow" feature in ManagementAgent::addObject causes a message to be sent. The call chain violates the required locking hierarchy and may, in rare cases, cause the broker to deadlock.

      Attachments

        Activity

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: