Fix QPID-2435.  This patch removes the "publishNow" feature from the broker agent.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@919619 13f79535-47bb-0310-9956-ffa450edef68